<resources>
    <string name="app_name">AlGhulAway</string>
    <string name="unitAmount">dl</string>
    <string name="unitAbv">%</string>
    <string name="unitCalories">kcal</string>
    <string name="unitPrice">Ft</string>
    <string name="unitAlcoholAmount">ml</string>
    <string name="DrinkingAllowed">You are allowed to drink for now.</string>
    <string name="total_alcohol_consumption">Total Alcohol Consumption:</string>
    <string name="action_removeAll">Remove All</string>
    <string name="amount">Amount</string>
    <string name="unitLeftDecorator">(</string>
    <string name="unitRightDecorator">)</string>
    <string name="abv">ABV</string>
    <string name="calories">Calories</string>
    <string name="price">Price</string>
    <string name="dialogPositiveButton">Ok</string>
    <string name="dialogNegativeButton">Cancel</string>
    <string name="dialogAddDrinkTitle">New drink</string>
</resources>